<resources>
    <string name="app_name">Массажный салон</string>
    <string name="start">Выберите действие</string>
    <string name="main_label">Привет!</string>
    <string name="reg_or_login_label">Добро пожаловать!</string>
    <string name="login_label">Войти в личный кабинет</string>
    <string name="registration">Регистрация</string>
    <string name="contuie">Осталось совсем немного!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Личный кабинет</string>
    <string name="menu_gallery">Услуги</string>
    <string name="menu_slideshow">Новости</string>
    <string name="menu_create_services">Создать услугу</string>
    <string name="menu_create_news">Создать новость</string>
    <string name="menu_applications">Заявки</string>
    <string name="menu_cart">Корзина</string>
</resources>