<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/pngwing_com"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="?android:attr/actionModeFindDrawable"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/news"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_create_services"
            android:icon="@drawable/news"
            android:title="@string/menu_create_services" />

        <item
            android:id="@+id/nav_create_news"
            android:icon="@drawable/news"
            android:title="@string/menu_create_news" />

        <item
            android:id="@+id/nav_application"
            android:icon="@drawable/news"
            android:title="@string/menu_applications" />
    </group>
</menu>